// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 50 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="0" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="1" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="2" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more aria-haspopup="true" role="menuitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="image"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="sr-only" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="menubar">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="0" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="1" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="2" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 80 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="0" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="1" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="2" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more aria-haspopup="true" role="menuitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="image"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="sr-only" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="menubar">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="0" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="1" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="2" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 100 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="0" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="1" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="2" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more aria-haspopup="true" role="menuitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="image"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="sr-only" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="menubar">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="0" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="1" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="2" data-style-direction-horizontal role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 250 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="0" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="1" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-overflow-base-index="2" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="image"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more aria-haspopup="true" hidden="" role="menuitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="image"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="sr-only" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="menubar">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="0" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="1" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item aria-haspopup="false" data-overflow-proxy-index="2" data-style-direction-horizontal hidden="" role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="image"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;
